--- a/Untitled.html
+++ b/Untitled.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+  <style>
+    p {
+        margin: 25px;
+      }
+  </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>A Meaningful Page Title</title>
 </head>
