--- a/Untitled.html
+++ b/Untitled.html
@@ -2,16 +2,11 @@
 <html>
 
 <head>
-  <style>
-    p {
-        margin: 50px;
-      }
-  </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>A Meaningful Page Title</title>
 </head>
 
-<body>
+<body style="margin:20px;padding:0">
 
 <h1>My First Heading</h1>
 <h4>James Nichols</h4>
