--- a/Untitled.html
+++ b/Untitled.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>A Meaningful Page Title</title>
 </head>
